--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -5,22 +5,74 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+    <Style>
+      .body-color{
+        background-color: #3AAFA9;
+        padding-top: 67px;
+      }
+      .header-txt{
+        font-family: 'Roboto';
+font-style: normal;
+font-weight: 800;
+font-size: 128px;
+line-height: 150px;
+
+color: #FFFFFF;
+      }
+      .form-div{
+        width: 523px;
+height: 414px;
+background: #17252A;
+box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+border-radius: 20px;
+      }
+      .h3-text{
+
+font-family: 'Roboto';
+font-style: normal;
+font-weight: 800;
+font-size: 32px;
+line-height: 38px;
+
+color: #FFFFFF;
+      }
+      * {
+        border-width: 2px;
+        border-color: red;
+      }
+    </Style>
   </head>
-  <body>
-    <div class="container-fluid text-center">
+  <body class="body-color">
+    <div class="container-fluid ">
       
-      <div class="card w-50">
-        <div class="card-body">
-          <form class="row g-3" action="{{ url_for('predict') }}" method="post" enctype = "multipart/form-data">
-            <div class="mb-3">
-              <input class="form-control" type="file" name="file" id="file">
+      <div class="container text-left">
+        <div class="row">
+          <div class="col">
+            <span class="header-txt">
+              STANCE DETECTION
+            </span>  
+          </div>
+          <div class="col">
+            <div class="card form-div">
+              <div class="card-body">
+                <span class="h3-text">
+                  Try yourself !!
+                </span>
+                <form class="row g-3" action="{{ url_for('predict') }}" method="post" enctype = "multipart/form-data">
+                  <div class="mb-3">
+                    <input class="form-control" type="file" name="file" id="file">
+                  </div>
+                  <div class="col-auto">
+                    <button type="submit" class="btn btn-outline-success">Predict</button>
+                  </div>
+                </form>
+              </div>
             </div>
-            <div class="col-auto">
-              <button type="submit" class="btn btn-outline-success">Predict</button>
-            </div>
-          </form>
+          </div>
         </div>
       </div>
+
+     
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
