--- a/WebApp/templates/index.html
+++ b/WebApp/templates/index.html
@@ -1,81 +1,217 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
-    <Style>
-      .body-color{
-        background-color: #3AAFA9;
-        padding-top: 67px;
-      }
-      .header-txt{
-        font-family: 'Roboto';
-font-style: normal;
-font-weight: 800;
-font-size: 128px;
-line-height: 150px;
 
-color: #FFFFFF;
-      }
-      .form-div{
-        width: 523px;
-height: 414px;
-background: #17252A;
-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-border-radius: 20px;
-      }
-      .h3-text{
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
+  <Style>
+    .body-color {
+      background-image: url('{{url_for("static", filename="back_img.jpg")}}');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+      padding: 0px;
+    }
+    .back-img{
 
-font-family: 'Roboto';
-font-style: normal;
-font-weight: 800;
-font-size: 32px;
-line-height: 38px;
-
-color: #FFFFFF;
-      }
-      * {
-        border-width: 2px;
-        border-color: red;
-      }
-    </Style>
-  </head>
-  <body class="body-color">
-    <div class="container-fluid ">
+      padding-top: 67px;
+      background-color:rgba(9, 48, 107, 0.45);
       
-      <div class="container text-left">
-        <div class="row">
-          <div class="col">
-            <span class="header-txt">
-              STANCE DETECTION
-            </span>  
-          </div>
-          <div class="col">
-            <div class="card form-div">
-              <div class="card-body">
-                <span class="h3-text">
-                  Try yourself !!
-                </span>
-                <form class="row g-3" action="{{ url_for('predict') }}" method="post" enctype = "multipart/form-data">
-                  <div class="mb-3">
-                    <input class="form-control" type="file" name="file" id="file">
-                  </div>
-                  <div class="col-auto">
-                    <button type="submit" class="btn btn-outline-success">Predict</button>
-                  </div>
-                </form>
+    }
+    .graph-image {
+      border-radius: 25px;
+      width: 100%;
+    }
+
+    .header-txt {
+      font-family: 'Roboto';
+      font-style: normal;
+      font-weight: 800;
+      font-size: 108px;
+      line-height: 150px;
+
+      color: #FFFFFF;
+    }
+
+    .form-div {
+      width: 523px;
+      background: #FFF;
+     
+      border-radius: 20px;
+      border-color: #FFF;
+    }
+
+    .h3-text {
+
+      font-family: 'Roboto';
+      font-style: normal;
+      font-weight: 800;
+      font-size: 25px;
+      color: #000;
+    }
+
+    .submit-button {
+
+      background: #09306B;
+      border-radius: 25px;
+      padding: 10px 40px;
+    }
+
+    .submit-button:hover {
+  background-color: #09306bc4; /* Set the background color to the desired color */
+  /* Set the text color to a contrasting color */
+  color: #FFF;
+}
+    .button-danger {
+
+      background: #8e1818;
+      border-radius: 25px;
+      padding: 10px 40px;
+    }
+
+    .button-success {
+
+      background: #2a8e18;
+      border-radius: 25px;
+      padding: 10px 40px;
+    }
+
+    .button-neutral {
+
+      background: #1572b0;
+      border-radius: 25px;
+      padding: 10px 40px;
+    }
+
+    .submit-button-txt {
+
+      font-family: 'Roboto';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 20px;
+      line-height: 15px;
+
+      color: #FFFFFF;
+    }
+    .img-div{
+      color: #000;
+      background-color: #FFF;
+      border-radius: 20px;
+      padding: 20px;
+      margin: 5px;
+    }
+  </Style>
+</head>
+
+<body class="body-color">
+<div class="back-img">
+  <div class="container text-left">
+    <div class="row ">
+      <div class="col">
+        <span class="header-txt">
+          STANCE DETECTION <p style="font-size: 50px;">"ON CLIMATE CHANGE"</p>
+        </span>
+      </div>
+      <div class="col-6" style="padding: 20px 10px;">
+        <div class="card form-div">
+          <div class="card-body">
+            <p class="h3-text" style="margin-bottom: 10px;">
+              Upload File !!
+            </p>
+            <form class="row" action="{{ url_for('predict') }}" method="post" enctype="multipart/form-data">
+              <div class="mb-3">
+                <input class="form-control" type="file" name="file" id="file">
               </div>
-            </div>
+              <div class="col-auto">
+                <button type="submit" class="btn submit-button submit-button-txt">Predict</button>
+              </div>
+            </form>
+            {% if fileReady == 1 %}
+            <br>
+            <p>
+              <a class="button-neutral submit-button-txt" href="/getOutputCSV">Download Output File</a>
+            </p>
+            {% endif %}
+
+          </div>
+        </div>
+        <br>
+        <br>
+        <div class="card form-div">
+          <div class="card-body">
+            <p class="h3-text">
+              Predict Tweet !!
+            </p>
+            <form class="row g-3" action="{{ url_for('predictText') }}" method="post" enctype="multipart/form-data">
+              <div class="mb-3">
+                <textarea class="form-control" placeholder="Write your tweet here..." type="textarea" rows="4" name="text" id="text">{{text}}</textarea>
+              </div>
+              <div class="row">
+                <div class="col-5">
+                  <button type="submit" class="btn submit-button submit-button-txt">Predict</button>
+                </div>
+                {% if textPredictions == 0 %}
+                <div class="col-7">
+                  <div class="button-danger submit-button-txt text-center">Tweet: Opposes</div>
+                </div>
+                {% endif %}
+                {% if textPredictions == 2 %}
+                <div class="col-7">
+                  <div class="button-success submit-button-txt text-center">Tweet: Favours </div>
+                </div>
+                {% endif %}
+                {% if textPredictions == 1 %}
+                <div class="col-7">
+                  <div class="button-neutral submit-button-txt text-center">Tweet: Neutral</div>
+                </div>
+                {% endif %}
+              </div>
+            </form>
           </div>
         </div>
       </div>
-
-     
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js" integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i" crossorigin="anonymous"></script> 
+    <br>
+    <div class="row ">
+      <div class="col img-div">
+        <p class="h3-text" style="font-size: 20px;">
+          Model Train Test Plot
+        </p>
+        <img src='{{url_for("static", filename="Model_TrainTest_Plot.png")}}' class="img-fluid graph-image" alt="...">
+      </div>
+      <div class="col-md-4 img-div">
+        <p class="h3-text" style="font-size: 20px;">
+          Confusion Matrix 
+        </p>
+        <img src='{{url_for("static", filename="Demo_csv_confusion_matrix.png")}}' class=" img-fluid graph-image" alt="...">
+      </div>
+      <div class="col-md-4 img-div">
+        <p class="h3-text" style="font-size: 20px;">
+          Normalized Confusion Matrix 
+        </p>
+        <img src='{{url_for("static", filename="Demo_csv_confusion_matrix_normalized.png")}}' class="img-fluid graph-image"
+          alt="...">
+      </div>
+     
+
+    </div>
+  </div>
+  <br>
+  <br>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.min.js"
+    integrity="sha384-heAjqF+bCxXpCWLa6Zhcp4fu20XoNIA98ecBC1YkdXhszjoejr5y9Q77hIrv8R9i"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
